@@ -33,3 +33,7 @@ libcommon_la_SOURCES = \
 
 man_MANS = \
 	munge.7
+
+install-data-local:
+	$(INSTALL) -d -m 0755 $(DESTDIR)$(mandir)
+	$(INSTALL) -d -m 0755 $(DESTDIR)$(mandir)/man7
